--- a/config/locales/sv.yml
+++ b/config/locales/sv.yml
@@ -456,7 +456,7 @@ sv:
     what_is_gcn_text: Vi stöttar klimatprojekt med certifieringar som FN och Världsnaturfonden står bakom - och tipsar dig om enkla sätt att minska ditt klimatavtryck. På så sätt kan vi bidra till att bromsa klimatförändringarna och rädda världen.
     statistics_header: Varje person gör skillnad!
     users_prefix: Just nu är vi
-    users_suffix: klimatneutrala medlemmar
+    users_suffix: medlemmar
     tonnes_prefix: Tillsammans har vi minskat
     tonnes_suffix: ton koldioxid i atmosfären
     call_to_actions:
@@ -671,8 +671,12 @@ sv:
           select_country: Välj ditt land eller område så att vi kan visa information som passar bäst för dig.
           continue_button: "Fortsätt till %{region}"
         sign_up: Registrera
+      prefooter:
+        heading: Rädda klimatet tillsammans med oss!
+        body_text: Prenumerera för att kompensera för ditt klimatavtryck.
+        button: Kom igång
       footer:
-        short_intro: GoClimateNeutral grundades 2017 med enda syftet att göra det enklare att leva ett klimatneutralt liv. 
+        short_intro: GoClimateNeutral grundades 2017 med enda syfte att göra det enklare att leva ett klimatneutralt liv.
         jobs: 'Jobb'
         headers:
           make_a_difference: Gör skillnad
@@ -714,17 +718,25 @@ sv:
       index:
         hero:
           heading: Prenumerationen som nollar ditt klimatavtryck
-          body_text: Räkna ut ditt avtryck för att starta din personliga prenumeration, på under 2 minuter.
+          body_text: Räkna ut ditt avtryck och starta din personliga prenumeration, på under 2 minuter.
+        how_it_works:
+          bullets:
+            bullet_1_heading: Beräkna ditt klimatavtryck
+            bullet_1_text: Vårt enkla test tar bara en minut att göra.
+            bullet_2_heading: Prenumerera
+            bullet_2_text: Starta en månadsprenumeration som motsvarar just ditt klimatavtryck.
+            bullet_3_heading: Rädda vår planet
+            bullet_3_text: Vi finansierar projekt som minskar mängden koldioxid i atmosfären.
         about_us:
           heading: Tillsammans kan vi göra skillnad för planeten redan idag
-          body_text: Vi stöttar klimatprojekt med certifieringar som FN och Världsnaturfonden står bakom - och tipsar dig om enkla sätt att minska ditt klimatavtryck. 
+          body_text: Vi stöttar klimatprojekt med certifieringar som FN och Världsnaturfonden står bakom - och tipsar om enkla sätt att minska ditt klimatavtryck. 
           read_more: Läs mer om oss
         projects:
           heading: Vart går pengarna? 
           body_text_1: Du är med och finansierar klimatprojekt motsvarande ditt personliga klimatavtryck.
           body_text_2: Projekten bidrar till den globala omställningen till förnyelsebara energikällor.
           body_text_3: Vi handplockar de projekt som ger mest nytta för pengarna och bidrar till så många av FN:s hållbarhetsmål som möjligt.
-          body_text_4: Vi är 100% transparenta med alla våra utgifter. Vi uppdaterar vår detaljerade redovisning kontinuerligt här på hemsidan.
+          body_text_4: Vi är 100% transparenta med alla våra utgifter.
           read_more: Läs mer om projekten 
         transparency:
           heading: 100% transparens
@@ -735,7 +747,7 @@ sv:
           clothes_last_longer: Få dina kläder att räcka längre
           reduce_carbon_footprint_food: Minska ditt klimatavtryck via din mat
           civil_disobedience: Civil olydnad för klimatet?
-          climate_friendly_housing_cooperative: Klimatsmart bostadsrättsförening - så påverkar du
+          climate_friendly_housing_cooperative: Klimatsmart bostadsrättsförening - så gör du skillnad
           climate_friendly_pension_saving: Fossilfritt pensionssparande
           read_more: Läs mer 
         community:
