--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -660,7 +660,7 @@ en:
         body_text: Subscribe to offset your carbon footprint.
         button: Get started
       footer:
-        short_intro: GoClimateNeutral was founded in 2017 with only one purpose - making it easier to lead a climate friendly lifestyle.
+        short_intro: GoClimateNeutral is a social company with the sole purpose of making it easier to start living a climate neutral life.
         jobs: 'Jobs'
         headers:
           make_a_difference: Get involved
