Normalize formatting for locale files
Crowdin would otherwise create diffs for no actual changes.

--- a/config/locales/activerecord.de.yml
+++ b/config/locales/activerecord.de.yml
@@ -6,14 +6,10 @@ de:
           attributes:
             password:
               too_short: Das Passwort ist zu kurz. Es sollte mind. 6 Zeichen enthalten!
-              blank: 'Ups, offenbar fehlt das Passwort!'
+              blank: Ups, offenbar fehlt das Passwort!
             email:
-              taken: >-
-                Diese E-Mail Adresse existiert bereits, versuchen Sie es mit
-                einer anderen!
+              taken: Diese E-Mail Adresse existiert bereits, versuchen Sie es mit einer anderen!
               blank: Dieses Feld scheint leer zu sein!
-              invalid: >-
-                Scheinbar ist ein Fehler aufgetreten, versuchen Sie es noch
-                einmal!
+              invalid: Scheinbar ist ein Fehler aufgetreten, versuchen Sie es noch einmal!
             privacy_policy:
               accepted: Sie müssen die Datenschutzerklärung akzeptieren
