--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -132,7 +132,7 @@ en:
     other: climate neutral months
   climate_country_toplist: Climate Country Toplist
   total_carbon_offset_by_us: Total carbon offsets by us together
-  read_more_about_investments_on_our_blog: Read more about the projects we investments in on our blog >>
+  read_more_about_investments_on_our_blog: 'Read more about the projects we investments in on our blog >>'
   tonnes_CO2: tonnes CO2
   tonnes: tonnes
   type: Type
@@ -160,7 +160,7 @@ en:
   the_payment_unfortunately_failed: Unfortunately your payment has failed
   no_worries_we_will_try_again_within_a_few_days: No worries, we will try again in a few days.
   you_might_need_to_update_your_payment_info: In order to continue living a climate neutral life with us, you might need to update your payment info.
-  link_to_update_your_payment_info: Update your payment info here >>
+  link_to_update_your_payment_info: 'Update your payment info here >>'
   this_mail_was_sent_by: This email was sent by
   to_stop_recieving_these_emails: To stop recieving these emails
   click_here: click here
@@ -176,7 +176,7 @@ en:
     one: year
   together_we_have_offset: Together we have offset
   goclimateneutral_and_this_planet_loves_you: GoClimate and this planet love you! You are the best!
-  learn_more_about_what_we_have_achieved_here: Learn more about what we have achieved here >>
+  learn_more_about_what_we_have_achieved_here: 'Learn more about what we have achieved here >>'
   thank_you: Thank you!
   the_best_way_to_help_is_to_get_as_many_people_climate_neutral_as_possible: 'Please consider sharing this with your friends, the more people that become climate neutral, the bigger the chance that we succeed in slowing down climate change!'
   press_images: Press Images
