--- a/config/locales/models.sv.yml
+++ b/config/locales/models.sv.yml
@@ -2,15 +2,16 @@ sv:
   models:
     money:
       currency_formats:
-        sek: '%{number} kr'
         eur: '%{number} €'
+        sek: '%{number} kr'
     currency:
       suffix:
+        eur: ' €'
         sek: ' kr'
     greenhouse_gases:
       tonnes:
-        one: "%{count} ton koldioxid"
-        other: "%{count} ton koldioxid"
+        one: '%{count} ton koldioxid'
+        other: '%{count} ton koldioxid'
       kg:
-        one: "%{count} kg koldioxid"
-        other: "%{count} kg koldioxid"
+        one: '%{count} kg koldioxid'
+        other: '%{count} kg koldioxid'
