--- a/config/locales/views/shared.de.yml
+++ b/config/locales/views/shared.de.yml
@@ -3,9 +3,7 @@ de:
     shared:
       header:
         region_recommendation:
-          select_country: >-
-            Wählen Sie Ihr Land oder Ihre Region aus, damit wir Ihnen die besten
-            Informationen anzeigen können.
-          continue_button: 'Weiter nach %{region}'
+          select_country: Wählen Sie Ihr Land oder Ihre Region aus, damit wir Ihnen die besten Informationen anzeigen können.
+          continue_button: "Weiter nach %{region}"
       footer:
-        jobs: Jobs
+        jobs: 'Jobs'
