Normalize formatting for locale files
Crowdin would otherwise create diffs for no actual changes.

--- a/config/locales/models.en.yml
+++ b/config/locales/models.en.yml
@@ -4,10 +4,16 @@ en:
       currency_formats:
         usd: '$%{number}'
         eur: '€%{number}'
+        sek: ''
     currency:
       prefix:
-        usd: $
-        eur: €
+        usd: '$'
+        eur: '€'
+        sek: ''
+      suffix:
+        usd: ''
+        eur: ''
+        sek: ''
     greenhouse_gases:
       tonnes:
         one: "%{count} tonne CO2e"
