Update Swedish translations for devise.views.en.yml

--- a/config/locales/devise.views.sv.yml
+++ b/config/locales/devise.views.sv.yml
@@ -3,6 +3,7 @@ sv:
     attributes:
       user:
         current_password: Nuvarande lösenord
+        email: Email
         password: Lösenord
         password_confirmation: Bekräfta lösenord
         remember_me: Kom ihåg mig
