--- a/config/locales/models.de.yml
+++ b/config/locales/models.de.yml
@@ -2,8 +2,16 @@ de:
   models:
     money:
       currency_formats:
+        usd: '$%{number}'
         eur: '%{number} €'
+    currency:
+      prefix:
+        usd: '$'
+        eur: '€'
     greenhouse_gases:
       tonnes:
         one: "%{count} Tonnen CO2e"
         other: "%{count} Tonnen CO2e"
+      kg:
+        one: "%{count} kg CO2e"
+        other: "%{count} kg CO2e"
