Update German translations for flight_offset_certificate.en.yml

--- a/config/locales/views/pdfs/flight_offset_certificate.de.yml
+++ b/config/locales/views/pdfs/flight_offset_certificate.de.yml
@@ -12,6 +12,7 @@ de:
         we_certify_that: Wir zertifizieren hiermit, dass
         has_carbon_offset: kompensierte
         project_information: Projektinformation
+        name: Name
         country: Land
         project_id: Projekt ID
         project_type: Projektart
