Update German translations for shared.en.yml

--- a/config/locales/views/shared.de.yml
+++ b/config/locales/views/shared.de.yml
@@ -5,3 +5,5 @@ de:
         region_recommendation:
           select_country: Wählen Sie Ihr Land oder Ihre Region aus, damit wir Ihnen die besten Informationen anzeigen können.
           continue_button: "Weiter nach %{region}"
+      footer:
+        jobs: 'Jobs'
