--- a/config/locales/views/welcome.sv.yml
+++ b/config/locales/views/welcome.sv.yml
@@ -43,6 +43,7 @@ sv:
               title: äventyrare, talare och guide
               quote: Jag gör ofta strandrensingar och dyker för att plocka upp övergivna fisknät i våra hav. Jag bor på en liten husbåt och jag har inga barn. Jag försöker också inspirera andra att ta bättre hand om vår natur.
             mattias:
+              title: partner @ Netlight Consulting
               quote: Som en förebild inom IT-branschen vill vi minska vårt avtryck för att bidra till att rädda klimatet.
             shelbi:
               title: hållbarhetsinfluencer
