--- a/config/locales/views/registrations.sv.yml
+++ b/config/locales/views/registrations.sv.yml
@@ -2,6 +2,7 @@ sv:
   views:
     registrations:
       well_done: Toppen! Nu har du tagit första steget!
+      result: Resultat
       your_yearly_climate_footprint: Ditt årliga klimatavtryck
       corresponds_to: Det motsvarar %{price}/månad.
       you: Du
@@ -15,9 +16,15 @@ sv:
       your_climate_footprint_compared_world: Ditt klimatavtryck på %{footprint} är %{relative} än genomsnittet i världen. För att ligga i linje med Parisavtalets 1,5 gradersmål måste vi globalt ha ett genomsnitt på 2,5 ton per person till år 2030. Genom att klimatkompensera dina utsläpp kan du nå noll redan idag.
       subscribe_heading: Prenumerera på ett klimatneutralt liv
       subscribe_intro: Starta din prenumeration idag så nollar du hela ditt klimatavtryck. Varje person räknas för att vi tillsammans ska nå klimatmålen!
+      step: Steg
+      adjust_subscription: Anpassa din prenumeration
+      create_account: Skapa konto
       your_subscription: Din prenumeration
       number_of_people: Antal personer
       total: Totalt
+      continue_to_payment: Fortsätt till betalning
+      start_subscription: Starta prenumeration
+      back: Tillbaka
       subscription_price_information: Priset för våra Gold Standard-certifierade klimatprojekt är %{price}/ton. För att vara på den säkra sidan så dubblar vi alltid antalet ton för din prenumeration.
       where_does_the_money_go:
         heading: Var går pengarna?
